# common-rust

./: Cargo.toml
eventstore/: Cargo.toml
eventstore/src/: client.rs  handler.rs
postgres/: Cargo.toml
postgres/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs
tracing/: Cargo.toml
