[package]
name = "server"
edition.workspace = true
version.workspace = true

[dependencies]
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true, features = ["filter", "util"] }
tower-http = { workspace = true, features = ["compression-gzip", "map-response-body", "request-id", "timeout", "trace", "util", "validate-request"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
